--- a/zParserExtender/zParserExtender.vcxproj
+++ b/zParserExtender/zParserExtender.vcxproj
@@ -417,6 +417,7 @@
     <ClInclude Include="ParserExtender.h" />
     <ClInclude Include="ParserExtender_Header.h" />
     <ClInclude Include="ParserExtender_Source.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="UnionAfx.h" />
     <ClInclude Include="ZenGin\Gothic_II_Addon\API\oAiHuman.h" />
     <ClInclude Include="ZenGin\Gothic_II_Addon\API\oAiShoot.h" />
@@ -1255,6 +1256,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".build_settings.inl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
