--- a/zParserExtender/zParserExtender.vcxproj.filters
+++ b/zParserExtender/zParserExtender.vcxproj.filters
@@ -2816,6 +2816,12 @@
     <ClInclude Include="InstanceItem.cpp">
       <Filter>Plugin\zParserExtender\InstanceItem</Filter>
     </ClInclude>
+    <ClInclude Include="zTriggerScript.cpp">
+      <Filter>Plugin\zParserExtender\Externals</Filter>
+    </ClInclude>
+    <ClInclude Include="zTriggerScript.h">
+      <Filter>Plugin\zParserExtender\Externals</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".build_settings.inl">
