New externals, alternative OU compiler, fixes and more

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /zParserExtender/G2A Release
 /zParserExtender/MP Release
 /zParserExtender/G2A Debug
+/Bin/Новая папка (2)
+/Bin/Новая папка
+*.7z
+*.log
