--- a/zParserExtender/zParserExtender.vcxproj
+++ b/zParserExtender/zParserExtender.vcxproj
@@ -484,6 +484,10 @@
     <ClCompile Include="ZenGin\Gothic_I_Classic\ClassDeclarators_G1.cpp" />
     <ClCompile Include="ZenGin\Gothic_I_Classic\Globals_G1.cpp" />
     <ClCompile Include="ZenGin\Gothic_I_Classic\Statics_G1.cpp" />
+    <ClInclude Include="VariableEditor.cpp">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="zExternals.cpp">
       <SubType>
       </SubType>
