--- a/zParserExtender/zParserExtender.vcxproj.filters
+++ b/zParserExtender/zParserExtender.vcxproj.filters
@@ -229,8 +229,8 @@
     <Filter Include="Plugin\zParserExtender\InstanceItem">
       <UniqueIdentifier>{9c1476e9-e9e5-420c-b5e8-dddcb57b4c87}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Plugin\zParserExtender\Extender\VariableEditor">
-      <UniqueIdentifier>{30ba6783-3e35-4a4f-90ce-cf45f63336bb}</UniqueIdentifier>
+    <Filter Include="Plugin\zParserExtender\Focus">
+      <UniqueIdentifier>{05f64e27-c4d3-498a-a45e-626d4a18919e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -2825,8 +2825,8 @@
     <ClInclude Include="zTriggerScript.h">
       <Filter>Plugin\zParserExtender\Externals</Filter>
     </ClInclude>
-    <ClInclude Include="VariableEditor.cpp">
-      <Filter>Plugin\zParserExtender\Extender\VariableEditor</Filter>
+    <ClInclude Include="Focus.cpp">
+      <Filter>Plugin\zParserExtender\Focus</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
