--- a/zParserExtender/zParserExtender.vcxproj
+++ b/zParserExtender/zParserExtender.vcxproj
@@ -466,6 +466,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="InjectedNPCs.cpp">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="InstanceItem.cpp">
       <SubType>
       </SubType>
