--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /.vs/zParserExtender/v16
 /Bin/zParserExtender — копия.dll
 /zParserExtender/G1 Release
+/zParserExtender/G1A Release/zParserExtender.tlog
+/zParserExtender/G1A Release
+/zParserExtender/G2 Release
+/Bin/Test.d
